public/css/styles.css
/* ... */
.shoppingCartLink{
    border: 6px solid #febd69;
    padding: 5px;
    background-color: #ffd49c;
    border-radius: 13px;
    width: 100%;
    font-weight: bold;
}
.shoppingCartLink:active, .shoppingCartLink:hover{
    text-decoration: underline;
    color: #131921;
}
.shoppingCartLink:link, .shoppingCartLink:visited{
    color: #131921;
}
/* 
-----------------------------------------------
Responsive Structure
----------------------------------------------- */
@media (max-width: 1750px) {
    main{
        margin:10px;
    }
}
@media (max-width: 710px) {
    body{
        background-color: rgb(244, 246, 246):
    }
    ul{
    color: white;
    display:flex;
    margin:0;
    list-style: none;
    flex-direction: column;
    padding:0;
    }
    .menu-logo{
        flex:1;
        display:flex;
        align-items: center;
        justify-content: center;
    }
    /* Resize Navbar for smaller screens: */
    .menu-logo > img{
        margin-top: 10px;
        height: 40px;
    }
    #menu-options{
        background-color: #232F3E;
        flex: 1;
        width: 100%;
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        margin: 0;
        padding: 0;
    }
    /*Change position of search bar*/
    .navSearch{
        width: 100%;
        flex: 1;
        padding: 6px;
    }
    .navSearch > form{
        max-width: 100%;
        display: flex;
        flex-direction: row;
        padding: 0px;
        margin-left: 5px;
    }
    #searchCategory{
        margin-left: 5px;
    }
    .menu-itemContainer{
        flex: 1;
        display: flex;
        justify-content: space-evenly;
    }
    #searchKeywords{
        margin-left: 6px;
    }
    .myInfo{
        display:none;
    }
    .productsContainer{
        background-color: transparent;
        margin-top: 10px;
        padding: 0;
        overflow-x: hidden;
        margin-left: -20px;
    }

    

    #invDashBoard > *{
        font-size: 14;
    }
    /*Inv clerk searchbar*/
    .invSearchContainer{
        padding-left: 5vw;
        padding-right: 5vw;
    }

    .viewProdBody{
        flex-direction: column;
    }
    .vProdBody{
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .vProdForm {
        min-width: 300px;
    }

    /* Shopping cart */
    .shoppingCartPanel{
        flex-direction: column;
    }
    .shWrap{
        margin-left: 0;
        display: flex;
        align-items: center;
        flex-direction: column;
    }
    .shProductTitle{
        font-size: 24px;
    }
    .shProductDesc{
        margin-top: 6px;
        font-size: 18px;
        color: rgb(92, 92, 92);
    }
    .shProductPrice{
        margin-top: 10px;
        margin-bottom: 0;
        font-size: 18px;
    }
    .shProductPrice > span{
        color: #bb002f;
    }
    .shProductImage{
        margin-left: 0;
        width: 100%;
        height: 100%;
        padding-left: 2vw;
    }
    .shProductImage > img{
        height: auto;
        width: 90vw;
    }
    .shProductQuantity{
        align-self: center;
        margin-left: 0;
        font-size: 18px;
    }
    .shProductTotal{
        align-self: center;
        box-sizing: border-box;
        margin-left: 0;
        margin-right: 0;
        font-size: 18px;
        padding-left: 0;
    }
    .shProductTotal > span{
        color: green;
    }
}

